do not create ActionManager without a reason
GitOrigin-RevId: e80a047dbcdfd2e5f3a77502fe12d54459ee1957